--- a/index.html
+++ b/index.html
@@ -4,14 +4,25 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Node Visualizer</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <style>
         .item {
-            width: 200px;
-            height: 130px;
+            width: 120px;
+            height: 300px;
             padding: 0.5em;
             border: 2px solid grey;
             border-radius: 10px;
             background-color: grey;
+            position: absolute;
+        }
+
+        button {
+            margin: 1em;
+        }
+
+        .form-control {
+            width: 75px;
         }
     </style>
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
@@ -29,21 +40,20 @@
 
     <button type="button" id="add" class="btn btn-primary">Add Node</button>
 
-    <div id="items">
+    <div id="items" class="container">
 
         <div class="item ui-widget-content">
             <div class="form-group">
-                <label for="exampleInputEmail1">item</label>
-                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-                    placeholder="Enter email">
+                <label for="item">item</label>
+                <input type="text" maxlength=5 class="form-control" id="item">
             </div>
             <div class="form-group">
-                <label for="exampleInputPassword1">next</label>
-                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                <label for="next">next</label>
+                <input type="text" maxlength=5 class="form-control" id="next">
             </div>
             <div class="form-group">
-                <label for="exampleInputPassword1">prev</label>
-                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                <label for="prev">prev</label>
+                <input type="text" maxlength=5 class="form-control" id="prev">
             </div>
         </div>
 
@@ -53,7 +63,22 @@
         $("#add").on("click", function () {
             console.log("click");
             $("#items").append(
-                '<div class="item ui-widget-content"><div class="form-group ><label for="exampleInputEmail1">item</label><input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email"> </div><div class="form-group"><label for="exampleInputPassword1">next</label><input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password"></div><div class="form-group"><label for="exampleInputPassword1">prev</label><input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password"></div></div>'
+                '<div id="items" class="container">\n' +
+                '\n' +
+                '        <div class="item ui-widget-content">\n' +
+                '            <div class="form-group">\n' +
+                '                <label for="item">item</label>\n' +
+                '                <input type="text" maxlength=5 class="form-control" id="item">\n' +
+                '            </div>\n' +
+                '            <div class="form-group">\n' +
+                '                <label for="next">next</label>\n' +
+                '                <input type="text" maxlength=5 class="form-control" id="next">\n' +
+                '            </div>\n' +
+                '            <div class="form-group">\n' +
+                '                <label for="prev">prev</label>\n' +
+                '                <input type="text" maxlength=5 class="form-control" id="prev">\n' +
+                '            </div>\n' +
+                '        </div>'
             );
             $(function () {
                 $(".item").draggable();
