changed item to index
because who cares the item stored when you're just trying to understand how to traverse and append.

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
                 '\n' +
                 '        <div class="item ui-widget-content">\n' +
                 '            <div class="form-group">\n' +
-                '                <label for="item">item</label>\n' +
-                '                <input type="text" maxlength=5 class="form-control" id="item">\n' +
+                '                <label for="id">id</label>\n' +
+                '                <input type="text" maxlength=5 class="form-control" id="id">\n' +
                 '            </div>\n' +
                 '            <div class="form-group">\n' +
                 '                <label for="next">next</label>\n' +
